Add cross-compilation, dry-run, install script and improve error output
jbundle couldn't cross-compile from macOS to Linux because it tried to
execute target-platform binaries (jdeps/jlink) on the host. Error output
from jdeps was hidden behind tracing::warn, invisible in CI without
--verbose. There were no pre-compiled binaries or easy install path.

Cross-compilation now downloads two JDKs: host for running tools, target
for jmods. jdeps/jlink errors are printed directly to stderr with full
command and output. Release workflow builds for 4 platforms (added
linux-aarch64) as tar.gz archives. Added install.sh, Homebrew formula,
and --dry-run flag to preview the build plan without executing.

fixes: #3
fixed: #52
fixed: #45
fixed: #7
fixed: #2

Signed-off-by: Avelino <31996+avelino@users.noreply.github.com>